# gr-lsa

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md  cscope.out
cmake/Modules/: lsaConfig.cmake
docs/: README.lsa
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: ProU_test.py  burst_rx.grc  burst_transceiver.grc  burst_tx.grc  coded_su_link.grc  debug.grc  header_payload_parser.grc  interference_detector.grc  lsa_ctrl.grc  lsa_phy.grc  my_auto_corr.grc  my_corr_test.grc  my_packet_rx.grc  packet_example.grc  packet_example.py  packet_loopback.grc  packet_test.grc  packet_test.py  proU_crit_system.grc  proU_test.grc  proU_test.grc.orig  proU_test_copy.grc  proU_test_symbol.grc  proU_test_symbol_ic.py  prou_critical_system.py  pulse_example.grc  sim_interference.grc  sim_interference.py  sns_loopback.grc  sns_rx.grc  sns_tx.grc  standard_rx.grc  su_lsa_advance_rx.grc  su_tx.grc  su_tx_test.grc  sync_ic.grc  time_sync_test.grc  usrp_block_mac.grc  usrp_burst_transceiver.grc  usrp_corr_test.grc  (+20 more)
grc/: CMakeLists.txt  lsa_app_simple.xml  lsa_arq_tx.xml  lsa_autoCorr_cc.xml  lsa_block_mac.xml  lsa_block_phy.xml  lsa_block_tagger_cc.xml  lsa_burst_gate_cc.xml  lsa_burst_parser_cc.xml  lsa_burst_synchronizer_cc.xml  lsa_burst_tagger_cc.xml  lsa_byte_to_symbol_bc.xml  lsa_chip_mapper.xml  lsa_chip_mapper_bb.xml  lsa_coarse_sync_cc.xml  lsa_control_source_b.xml  lsa_correlate_extract_cc.xml  lsa_correlate_sync_cc.xml  lsa_detection_tx.xml  lsa_dump_tx.xml  lsa_eng_det_cc.xml  lsa_expand_symbal_to_sample_ff.xml  lsa_expand_symbol_to_sample_ff.xml  lsa_file_downloader_tx.xml  lsa_header_payload_parser_cb.xml  lsa_ic_critical_cc.xml  lsa_ic_ncfo_cc.xml  lsa_ic_resync_cc.xml  lsa_interference_cancellation_core_cc.xml  lsa_interference_canceller_cc.xml  lsa_interference_energy_detector_cc.xml  lsa_interference_tagger_cc.xml  lsa_length_prefixer.xml  lsa_lsa_queue_cc.xml  lsa_mac.xml  lsa_message_file_sink.xml  lsa_modified_costas_loop_cc.xml  lsa_modified_polyphase_time_sync_cc.xml  lsa_moving_average_cc.xml  lsa_moving_average_ff.xml  (+48 more)
include/lsa/: CMakeLists.txt  api.h  app_simple.h  arq_tx.h  autoCorr_cc.h  block_mac.h  block_phy.h  block_tagger_cc.h  burst_gate_cc.h  burst_parser_cc.h  burst_synchronizer_cc.h  burst_tagger_cc.h  byte_to_symbol_bc.h  chip_mapper.h  chip_mapper_bb.h  coarse_sync_cc.h  control_source_b.h  correlate_extract_cc.h  correlate_sync_cc.h  detection_tx.h  dump_tx.h  eng_det_cc.h  expand_symbal_to_sample_ff.h  expand_symbol_to_sample_ff.h  file_downloader_tx.h  header_payload_parser_cb.h  ic_critical_cc.h  ic_ncfo_cc.h  ic_resync_cc.h  interference_cancellation_core_cc.h  interference_canceller_cc.h  interference_energy_detector_cc.h  interference_tagger_cc.h  length_prefixer.h  lsa_queue_cc.h  mac.h  message_file_sink.h  modified_costas_loop_cc.h  modified_polyphase_time_sync_cc.h  moving_average_cc.h  (+49 more)
lib/: CMakeLists.txt  app_simple.cc  arq_tx.cc  autoCorr_cc_impl.cc  autoCorr_cc_impl.h  block_mac.cc  block_phy.cc  block_tagger_cc_impl.cc  block_tagger_cc_impl.h  burst_gate_cc_impl.cc  burst_gate_cc_impl.h  burst_parser_cc_impl.cc  burst_parser_cc_impl.h  burst_synchronizer_cc_impl.cc  burst_synchronizer_cc_impl.h  burst_tagger_cc_impl.cc  burst_tagger_cc_impl.h  byte_to_symbol_bc_impl.cc  byte_to_symbol_bc_impl.h  chip_mapper.cc  chip_mapper_bb_impl.cc  chip_mapper_bb_impl.h  coarse_sync_cc_impl.cc  coarse_sync_cc_impl.h  control_source_b_impl.cc  control_source_b_impl.h  correlate_extract_cc_impl.cc  correlate_extract_cc_impl.h  correlate_sync_cc_impl.cc  correlate_sync_cc_impl.h  detection_tx.cc  dump_tx.cc  eng_det_cc_impl.cc  eng_det_cc_impl.h  expand_symbal_to_sample_ff_impl.cc  expand_symbal_to_sample_ff_impl.h  expand_symbol_to_sample_ff_impl.cc  expand_symbol_to_sample_ff_impl.h  file_downloader_tx.cc  header_payload_parser_cb_impl.cc  (+132 more)
python/: CMakeLists.txt  __init__.py  qa_autoCorr_cc.py  qa_burst_parser_cc.py  qa_burst_synchronizer_cc.py  qa_burst_tagger_cc.py  qa_chip_mapper_bb.py  qa_coarse_sync_cc.py  qa_control_source_b.py  qa_correlate_extract_cc.py  qa_correlate_sync_cc.py  qa_eng_det_cc.py  qa_expand_symbal_to_sample_ff.py  qa_expand_symbol_to_sample_ff.py  qa_header_payload_parser_cb.py  qa_interference_canceller_cc.py  qa_interference_energy_detector_cc.py  qa_interference_tagger_cc.py  qa_lsa_queue_cc.py  qa_modified_costas_loop_cc.py  qa_modified_polyphase_time_sync_cc.py  qa_moving_average_cc.py  qa_moving_average_ff.py  qa_my_access_corr_bb.py  qa_packet_parser_b.py  qa_packet_sink.py  qa_poly_costas_sync_cc.py  qa_protocol_parser_b.py  qa_prou_packet_sink_f.py  qa_prou_sample_queue_cc.py  qa_prou_sample_receiver_cb.py  qa_square_cc.py  qa_su_header_prefix.py  qa_su_queued_transmitter_cc.py  qa_su_sample_receiver_cb.py  qa_su_transmitter_bb.py  qa_su_transmitter_bc.py  qa_symbol_corrector_cc.py  qa_symbol_level_ic_cc.py  qa_symbol_queue_receiver_cc.py  (+4 more)
swig/: CMakeLists.txt  lsa_swig.i
